labs/13-service-mesh/manifests/envoy-standalone.yaml
# docker run --rm -p 10000:10000 -p 9901:9901 -v $PWD/envoy-standalone.yaml:/etc/envoy/envoy.yaml envoyproxy/envoy:v1.31-latest
# curl localhost:10000/  -> proxied to httpbin.org ; admin: localhost:9901
admin:
  address: {socket_address: {address: 0.0.0.0, port_value: 9901}}
static_resources:
  listeners:
    - name: listener_0
      address: {socket_address: {address: 0.0.0.0, port_value: 10000}}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress
                route_config:
                  virtual_hosts:
                    - name: all
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/"}
                          route: {cluster: httpbin, host_rewrite_literal: httpbin.org, timeout: 3s,
                                  retry_policy: {retry_on: 5xx, num_retries: 2}}
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {"@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router}
  clusters:
    - name: httpbin
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: httpbin
        endpoints: [{lb_endpoints: [{endpoint: {address: {socket_address: {address: httpbin.org, port_value: 443}}}}]}]
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: httpbin.org
